syntax = "proto3";

package greeter;

option go_package = "grpc-example/proto";

service Greeter {
  rpc SayHello (HelloRequest) returns (HelloReply) {}
  rpc SendChat (ChatRequest) returns (Recived) {}
  rpc BlockUser (BlockRequest) returns (BlockResponse) {}
}

message HelloRequest {
  string name = 1;
}

message ChatRequest {
  string user = 1;
  string message = 2;
}
message Recived {
  string message =1;
}
message HelloReply {
  string message = 1;
}

message BlockRequest {
  string username = 1;
}

message BlockResponse {
  string message = 1;
  bool success = 2;
}